# fastapi-demo

./: .gitignore  Makefile  README.me  alembic.ini  pyproject.toml
src/application/: bootstrap.py  containers.py  context.py  schemas.py  settings.py
src/application/usecases/: __init__.py  create_user_uc.py  get_users_uc.py
src/domain/entities/: user.py
src/domain/repositories/: user_repository.py
src/openapi/: app.py  main.py
src/openapi/endpoints/: auth.py  root.py  users.py
src/openapi/middlewares/: context_middleware.py
src/repositories/: database.py  sa_base_repository.py  sa_use_case_context.py  sa_user_repository.py
src/shared/: context.py  domain.py
tests/: test_get_api_info.py
